--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
+<!--
+ * @Description: 
+ * @Author: 刘亚亚
+ * @Date: 2020-06-02 16:48:00
+ * @LastEditTime: 2020-06-19 10:55:00
+ * @LastEditors: 刘亚亚
+-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <div id="root"></div>
-  <noscript>请取消禁用JavaScript脚本！</noscript>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>博客</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <noscript>请取消禁用JavaScript脚本！</noscript>
+  </body>
 </html>
